--- a/styles/location.css
+++ b/styles/location.css
@@ -1,10 +1,3 @@
-* {
-    box-sizing: border-box;
-    font-family: 'Open Sans';
-    font-style: normal;
-    line-height: 150%;
-}
-
 .font-700 {
     font-weight: 700;
 }
@@ -234,7 +227,7 @@ select {
     .container {
         width: 320px;
     }
-    .container .questions {
+    .container .questions, .pay .methode input[type="radio"]:checked ~ .questions {
         display: flex;
         flex-direction: column;
         gap: 20px;
