--- a/styles/location.css
+++ b/styles/location.css
@@ -25,6 +25,10 @@ form {
     padding: 32px;
 }
 
+body {
+    --placeholder-color: #90A3BF;
+}
+
 .main-body {
     display: flex;
     flex-direction: column;
@@ -35,10 +39,16 @@ form {
     border: 1px solid #596780;
     border-radius: 10px;
     padding: 25px;
+    outline: none;
+}
+
+.container .champ:focus {
+    border-color: transparent;
+    outline: 2px solid yellow;
 }
 
 .container .champ::placeholder {
-    color: #90A3BF;
+    color: var(--placeholder-color);
 }
 
 .container .champ[type="date"], .champ[type="time"] {
@@ -46,7 +56,7 @@ form {
 }
 
 .container .champ[type="date"]:invalid, .champ[type="time"]:invalid  {
-    color: #90A3BF;
+    color: var(--placeholder-color);
 }
 
 select {
@@ -54,7 +64,7 @@ select {
 }
 
 .container {
-    background: #FFFFFF;
+    background: white;
     width: 850px;
     border-radius: 10px;
     padding: 24px;
@@ -66,7 +76,7 @@ select {
 }
 
 .container .subtitle {
-    color: #90A3BF;
+    color: var(--placeholder-color);
     font-size: 14px;
 }
 
@@ -94,8 +104,11 @@ select {
     margin-bottom: 24px;
 }
 
-.radio {
-    float: left;
+.pay {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 20px;
+    justify-content: left;
 }
 
 .radiolabel {
@@ -104,21 +117,16 @@ select {
     justify-content: space-between;
 }
 
-.pay {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-}
-
 .pay .methode {
     background: #E0E9F4;
+    display: grid;
     grid-template-areas: "radio     radiolabel"
                          "questions questions";
     border-radius: 10px;
     padding: 24px;
 }
 
-.pay .methode .radio {
+.pay .methode input[type="radio"] {
     display: inline-block;
 }
 
@@ -170,7 +178,7 @@ select {
 
 .final .separation {
     width: 100%;
-    height: 0px;
+    height: 0;
     border: 1px solid #E0E9F4;
     margin: 32px 0;
 }
@@ -183,7 +191,7 @@ select {
 }
 
 .final .price-type {
-    color: #90A3BF;
+    color: var(--placeholder-color);
 }
 
 .final .final-promo {
