--- a/styles/style.css
+++ b/styles/style.css
@@ -12,15 +12,15 @@ body {
 }
 
 header {
-    background: #FFFFFF;
-    padding: 28px 18px;
+    background: white;
+    padding: 40px 0px;
     font-size: 32px;
     font-weight: 700;
     margin-bottom: 30px;
 }
 
 header a {
-    margin: 60px;
+    margin-left: 60px;
     text-decoration: none;
     color: #3563E9;
 }
