--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     margin: auto 64px auto 64px;
     gap: 32px;  
 }
