--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,22 @@
     line-height: 150%;
 }
 
+.font-700 {
+    font-weight: 700;
+}
+
+.font-600 {
+    font-weight: 600;
+}
+
+.font-500 {
+    font-weight: 500;
+}
+
+.font-400 {
+    font-weight: 400;
+}
+
 body {
     background: #F6F7F9;
 }
@@ -16,7 +32,6 @@ header {
     padding: 40px 0px;
     font-size: 32px;
     font-weight: 700;
-    margin-bottom: 30px;
 }
 
 header a {
